kubernetes/apps/vaultwarden/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer

    traefik.ingress.kubernetes.io/router.middlewares: traefik-vaultwarden-strip-prefix@kubernetescrd
spec:
  rules:
    - host: vaultwarden.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-service
                port:
                  number: 80
          - path: /notifications/hub/
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-service
                port:
                  number: 3012
  tls:
    - hosts:
        - vaultwarden.kube-prod-d1.mclacken.net
      secretName: vaultwarden-certificate-secret
